<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Project - Contact Manager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">New Contact</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_main_screen">Input Contact Info.</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>

    <string name="save">Save Contact</string>

    <string name="deleteContact">Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>